cmake_minimum_required(VERSION 2.8)
project(final)
include_directories(include)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -lpthread -lrt -Wall")
set(SRC_DIR src)
set(SRC_LIB_DIR ${SRC_DIR}/lib)
set(SRC_LIST ${SRC_DIR}/main.cpp ${SRC_LIB_DIR}/daemonizator.cpp ${SRC_LIB_DIR}/errorproc.cpp ${SRC_LIB_DIR}/unblock.cpp ${SRC_LIB_DIR}/worker.cpp ${SRC_LIB_DIR}/fdtransceiver.cpp ${SRC_LIB_DIR}/webproc.cpp)
set(HEADER_FILES ${SRC_LIB_DIR}/fdtransceiver.h )
file(GLOB CPPS "*.cpp")
add_executable(${PROJECT_NAME} ${SRC_LIST})