cmake_minimum_required(VERSION 2.8)
project(final)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fpermissive")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread")

#set (LIBS "-pthread")
set(SRC_DIR src)
set(SRC_LIB_DIR ${SRC_DIR}/lib)
set(SRC_LIST main.cpp)
#set(HEADER_FILES ${SRC_LIB_DIR}/fdtransceiver.h )
add_executable(${PROJECT_NAME} ${SRC_LIST})
#target_link_libraries(${PROJECT_NAME} ${LIBS})